ImportPanel: preview description

--- a/org.polymap.p4.data.importer/src/org/polymap/p4/data/importer/messages.properties
+++ b/org.polymap.p4.data.importer/src/org/polymap/p4/data/importer/messages.properties
@@ -11,7 +11,7 @@ Download_summary     = Download from remote site
 
 ImportPanel_fabTooltip     = Import data
 ImportPanel_forwardTooltip = Analyse and process the selected data
-ImportPanel_previewMsg     = No data to preview yet.\n\nPlease **upload** a file or choose one of the **service** importers.\n\nSupported **data** formats:\n\n  * CSV\n  * MS Excel\n  * Shapefile\n  * KML/KMZ\n  * GeoJSON\n\n**Raster** formats:\n\n  * GeoTiff\n  * ArcGrid\n  * any [GDAL supported](http://www.gdal.org/formats_list.html) format\n\nOr an **archive**:\n\n  * ZIP\n  * TAR, TGZ, GZ
+ImportPanel_previewMsg     = Please **upload** a file or give a **service** URL.\n\n### Supported **data** formats\n\n  * CSV\n  * MS Excel\n  * Shapefile\n  * KML/KMZ\n  * GeoJSON\n\n### **Raster** formats\n\n  * GeoTiff\n  * ArcGrid\n  * any [GDAL supported](http://www.gdal.org/formats_list.html) format\n\n### Compressed files or **archives**:\n\n  * *.zip, *.tar, *.tgz, *.gz, *.bz2
 ImportPanel_previewNoData  = Analyzing data...\n\nResults are shown in the list above. Click an entry to get a preview.\n\n
 ImportPanel_previewTitle   = Data preview
 ImportPanel_title          = Import
